--- a/style.css
+++ b/style.css
@@ -81,17 +81,27 @@ img.o-icon{
 
 .game-space{
     flex:auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: auto 1fr;
+    display:flex;
+    flex-direction: column;
+    
 }
 
-.gameboard{
-    max-width: 60vw;
-    max-height: 70vh;
+.game-board{
+    max-width: 50vw;
     aspect-ratio: 1/1;
-    grid-row: 1;
-    grid-column: 1/5;
+    flex-grow: auto;
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+}
+
+.game-cell{
+    border-color: black;
+    border-style: solid;
+}
+
+.game-space-buttons{
+    align-self: center;
 }
 
 .footer{
